--- a/mhapi/composer.json
+++ b/mhapi/composer.json
@@ -8,7 +8,8 @@
         "php": ">=5.5.9",
         "laravel/framework": "5.2.*",
         "codeception/codeception": "*",
-        "laravelcollective/html": "~5.0"
+        "laravelcollective/html": "~5.0",
+        "phpmailer/phpmailer": "^5.2"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
