--- a/mhapi/composer.json
+++ b/mhapi/composer.json
@@ -9,14 +9,16 @@
         "laravel/framework": "5.2.*",
         "codeception/codeception": "*",
         "laravelcollective/html": "~5.0",
-        "phpmailer/phpmailer": "^5.2"
+        "phpmailer/phpmailer": "^5.2",
+        "guzzlehttp/guzzle": "~6.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~4.0",
         "symfony/css-selector": "2.8.*|3.0.*",
-        "symfony/dom-crawler": "2.8.*|3.0.*"
+        "symfony/dom-crawler": "2.8.*|3.0.*",
+        "guzzlehttp/guzzle": "~6.0"
     },
     "autoload": {
         "classmap": [
