--- a/mhapi/tests/functional.suite.yml
+++ b/mhapi/tests/functional.suite.yml
@@ -7,5 +7,7 @@
 class_name: FunctionalTester
 modules:
     enabled:
-        # add framework module here
-        - \Helper\Functional
+        - Laravel5:
+            environment_file: .env.local
+        - Cli
+        - Filesystem
