--- a/mhapi/composer.json
+++ b/mhapi/composer.json
@@ -11,7 +11,8 @@
         "laravelcollective/html": "~5.0",
         "phpmailer/phpmailer": "^5.2",
         "guzzlehttp/guzzle": "~6.0",
-        "simplesoftwareio/simple-sms": "3.0.*"
+        "simplesoftwareio/simple-sms": "3.0.*",
+        "aws/aws-sdk-php":"~3.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
