--- a/mhapi/composer.json
+++ b/mhapi/composer.json
@@ -12,7 +12,8 @@
         "phpmailer/phpmailer": "^5.2",
         "guzzlehttp/guzzle": "~6.0",
         "simplesoftwareio/simple-sms": "3.0.*",
-        "aws/aws-sdk-php":"~3.0"
+        "aws/aws-sdk-php":"~3.0",
+        "predis/predis": "~1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
