ADDED pause feature

--- a/mhapi/tests/acceptance.suite.yml
+++ b/mhapi/tests/acceptance.suite.yml
@@ -1,4 +1,4 @@
-cd# Codeception Test Suite Configuration
+# Codeception Test Suite Configuration
 #
 # Suite for acceptance tests.
 # Perform tests in browser using the WebDriver or PhpBrowser.
