--- a/mhapi/composer.json
+++ b/mhapi/composer.json
@@ -13,7 +13,8 @@
         "guzzlehttp/guzzle": "~6.0",
         "simplesoftwareio/simple-sms": "3.0.*",
         "aws/aws-sdk-php":"~3.0",
-        "predis/predis": "~1.0"
+        "predis/predis": "~1.0",
+        "pusher/pusher-php-server": "^2.6"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
