--- a/mhapi/composer.json
+++ b/mhapi/composer.json
@@ -16,7 +16,8 @@
         "predis/predis": "~1.0",
         "pusher/pusher-php-server": "^2.6",
         "kwn/php-rdkafka-stubs": "^0.0.5",
-        "alfallouji/php_multithread": "^0.1.4"
+        "alfallouji/php_multithread": "^0.1.4",
+        "asyncphp/doorman": "^3.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
