ADDED redis and removed sqs

--- a/.env
+++ b/.env
@@ -14,7 +14,8 @@ DB_PASSWORD=jack1999
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
-QUEUE_DRIVER=sqs
+QUEUE_DRIVER=redis
+REDIS_HOST=redis-1.int.markethero.io
 
 MAIL_DRIVER=smtp
 MAIL_HOST=markethero.smtp.com
