MANY changes for Kafka/Redis

--- a/mhapi/supervisor/mail-one-sendmail.conf
+++ b/mhapi/supervisor/mail-one-sendmail.conf
@@ -1,7 +1,9 @@
 [program:sendmail-worker]
+process_name=%(program_name)s_%(process_num)02d
 command=/usr/bin/php -q /var/www/html/mhapi/artisan send-groups
-autostart=true
+autostart=false
 autorestart=true
 user=deploy
+numprocs=1
 redirect_stderr=true
-stdout_logfile=/var/www/html/mhapi/worker.log
+stdout_logfile=/var/www/html/mhapi/send-groups-worker.log
