--- a/mhapi/supervisor/mail-one-sendmail.conf
+++ b/mhapi/supervisor/mail-one-sendmail.conf
@@ -1,7 +1,7 @@
 [program:sendmail-worker]
 process_name=%(program_name)s_%(process_num)02d
 command=/usr/bin/php -q /var/www/html/mhapi/artisan send-broadcast
-autostart=true
+autostart=false
 autorestart=true
 user=deploy
 numprocs=1
